src/assets/css/global.css
@font-face {
  font-family: 'Work Sans';
  src: url('../fonts/WorkSans-Regular.otf');
}

body {
  margin: 0;
}

body, button, input {
  font-family: 'Work Sans';
}

.txt {
  color: #8C8C8C;
}

.faded.light {
  color: #bfbfbf;
  opacity: .8;
  cursor: initial;
}

.faded.dark {
  color: #808080;
  opacity: .5;
  cursor: initial;
}

.main-color, h1, h2, h3, h4, h5, h6 {
  color: #A97CFC;
}

.background-color.light {
  background-color: #F8F7F6;
}

.background-color.dark {
  background-color: #1F1F1F;
}

.card.light {
  background-color: #FDFCFC;
  border: .5px solid #D9D9D9;
}

.card.dark {
  background-color: #282828;
}

.main-color-card.light {
  background-color: #A97CFC;
}

.main-color-card.dark {
  background-color: #282828;
}

.gray.light {
  background-color: #F0F0F0;
}

.gray.dark {
  background-color: #1C1C1C;
}

.round-border {
  border-radius: 12px;
}

.fade-enter-active, .fade-leave-active {
  transition: opacity .3s;
}
.fade-enter, .fade-leave-to {
  opacity: 0;
}

